# mihasv3

./: .cfignore  .env  .env.development  .env.example  .env.monitoring  .env.production  .env.scripts.example  .env.test  .gitattributes  .gitignore  .token  ADMIN_ERROR_FIX.md  ADMIN_ISSUES_ANALYSIS.md  ADMIN_PAGES_FIXES.md  ADMIN_UI_FIX.md  ADMIN_VERIFICATION_CHECKLIST.md  AGENTS.md  AI_ASSISTANT_COMPLETE_ANALYSIS.md  AI_IMPLEMENTATION_COMPLETE.md  AI_IMPLEMENTATION_SUMMARY.md  AI_MIGRATION_SUMMARY.md  AI_SYSTEM_ANALYSIS.md  ALL_PHASES_COMPLETE.md  API_CONSOLIDATION_COMPLETE.md  API_STRUCTURE_GUIDE.md  APPLICATION_SLIP_VERIFICATION.md  APPLICATION_WIZARD_FIX_SUMMARY.md  APPROVAL_FIX_SUMMARY.md  AUDIT-FOLLOWUP-2026-05-17.md  AUDIT-REPORT-2026-04-24.md  AUDIT-REPORT-2026-05-17.md  AUDIT_TRAIL_COMPLETE.md  AUTHENTICATION_FIX_COMPLETE.md  AUTH_AUDIT_VERIFICATION.md  AUTH_FIX_PLAN.md  AUTH_IMPROVEMENTS_SUMMARY.md  AUTO_UPLOAD_FIX.md  CACHE_MONITORING_IMPLEMENTATION.md  CLOUDFLARE_AI_MIGRATION.md  CLOUDFLARE_AI_VERIFICATION.md  (+329 more)
backend/: .env.example  DEPLOY.md  Dockerfile  Makefile  docker-compose.local-real.yml  docker-compose.local-test.yml  docker-compose.yml  drop_test_db_tmp.py  pyproject.toml  requirements.txt
backend/apps/: __init__.py
backend/config/: asgi.py  celery.py  urls.py  wsgi.py
backend/migrations/: apply-migrations.ts
backend/schema/: AUDIT_CLOSE_OUT.md  README.md  REMEDIATION_TARGETS.md  lint_baseline.json  openapi.v1.baseline.yaml
backend/scripts/: 00_full_schema.sql  2026_05_18_expand_application_status_columns.sql  2026_06_08_student_number.sql  (+56 more)
(+6803 files in other folders)
