[project]
name = "mihas-django-api"
version = "0.1.0"
description = "MIHAS Admissions Portal — Django 5 + DRF backend"
requires-python = ">=3.12"
license = {text = "Proprietary"}

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short"
markers = [
    "tenant: multi-tenant Beanola admissions exploration/correctness tests",
]

[tool.ruff]
target-version = "py312"
line-length = 120
